cmake_minimum_required(VERSION 3.4)
project (Bridge)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (VERSION_ MAJOR 0)
set (VERSION_ MINOR 1)
set (VERSION_ PATCH 0)
set (VERSION_TWEAK 0)
set (VERSION\S(VERSION_MAJOR) -S(VERSION_MINOR) -$(VERSION_PATCH) -$(VERSION_TWEAK})
set (VERSION_STRING "VS(VERSION}")
option (BUILD_TESTS "Build tests" OFF)
add_executable (bridge bridge.cpp)
1f (BUILD_TESTS)
enable_testing()
add_subdirectory(third-party/gtest)
file(GLOB tests "tests/*,cpp")
foreach(test ยง(tests))
add_executable(check $(test))
target_ link_libraries (check gtest_main gmock_main)
add_test (NAME check COMMAND check)
endforeach(test ${tests))
endif()
include (CPackConfig-cmake)
